--- a/donnateMpesa.html
+++ b/donnateMpesa.html
@@ -143,12 +143,24 @@
                                                 </div>
                                             </div>
 
+                                            <div class="form-group"></div>
+
+                                            <div class="form-group">
+                                                <label for="donorEmail" class="text-muted">Email</label> <br>
+                                                <input type="text" placeholder="Email" id="donorEmail" class="form-control" required>
+                                            </div>
+
                                             <h6 class="mt-4">Please follow the process below:</h6>
                                             <p>
                                                 <ol class="para-1">
                                                     <li>Go to your M-PESA menu</li>
                                                     <li>Select Lipa na M-PESA</li>
-                                                    <li>Select</li>
+                                                    <li>Select Buy Goods and Services</li>
+                                                    <li>Enter Till Number: "5154883"</li>
+                                                    <li>Enter Amount: "KES "</li>
+                                                    <li>Enter Your M-PESA pin</li>
+                                                    <li>Confirm payment/ transaction</li>
+                                                    <li>Done!</li>
                                                 </ol>
                                             </p>
 
