--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -462,7 +462,7 @@
                                             </p>
                                         </div>
                                         <div class="col-1 mt-4">
-                                            <a href="#" data-toggle="tooltip" title="edit" data-html="true" data-placement="top">
+                                            <a href="adminEditEvent.html" data-toggle="tooltip" title="edit" data-html="true" data-placement="top">
                                                 <i class="fas fa-edit fa-lg text-success mr-2"></i>
                                             </a>
                                         </div>
