--- a/contactUs.html
+++ b/contactUs.html
@@ -69,7 +69,7 @@
                 <div class="container justify-content-center text-center">
                     <h1 class="heading-1">Want to be a Part of Us?</h1>
                     <p class="para-1">
-                        Want to contact Kenya Scoliosis Foundation? We're pretty friendly. We'd love to hear from you!
+                        Want to contact Kenya Scoliosis Foundation? We'd love to hear from you!
                     </p>
 
                     <div class="row">
@@ -107,9 +107,9 @@
                             <label for="mobile" class="details">+254 757701778/ +254 73 112377</label>
                             <br>
                             <i class="fas fa-map-marker-alt" id="location"></i>
-                            <label for="location" class="details">Stadium Estate, Nanyuki</label>
+                            <label for="location" class="details">Nanyuki</label>
                             <br>
-                            <label for="location" class="details">P.O.BOX 383-10400</label>
+                            <label for="location" class="details">P.O.BOX 1974-10400</label>
                             <br>
                             <label for="location" class="details">Kenya</label>
                         </div>
