--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -76,7 +76,7 @@
                                                 So, how do we use our finances?
                                                 <li class="text-muted">Facilitate treatment and rehabilitation of patients</li>
                                                 <li class="text-muted">School Screening Programs</li>
-                                                <li class="text-muted">Aweareness Programs</li>
+                                                <li class="text-muted">Awareness Campaign</li>
                                                 <li class="text-muted">Facilitate Research and Advocacy</li>
                                                 <li class="text-muted">Create a Resource Centre</li>
                                             </p>
@@ -91,7 +91,7 @@
                                                 <strong>
                                                     Kenya Scoliosis Foundation
                                                     <br>
-                                                    P.O.BOX 383-10400
+                                                    P.O.BOX 1974-10400
                                                     <br>
                                                     Nanyuki, Kenya
                                                 </strong>
@@ -107,8 +107,8 @@
                                     <div class="card">
                                         <h1 class="text-center mt-3 heading">Donate</h1>
                                         <p class="para-1 mt-3 px-4">
-                                            Give a gift of your choosing. 
-                                            Your donation will help create aweraness and treat people with the scoliosis condition
+                                            Give a gift of your choice. 
+                                            Your donation will help create awaraness and treat people with the scoliosis and spinal deformities.
                                         </p>
                                         <hr>
                                         <form action="donateThankYou.html" class="px-4 donation-form">
