--- a/events.html
+++ b/events.html
@@ -67,9 +67,9 @@
             <!--Section 18-->
             <div class="section-18">
                 <div class="container text-center">
-                    <h1 class="heading-1">Upcomming Events</h1>
+                    <h1 class="heading-1">Upcoming Events</h1>
                     <p class="para-1">
-                        We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
+                        We have a host of wonderful events ined up for the year ahead that help raise funds and awareness 
                         for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there are lots of things 
                         you can get involved with. We also have talks, exhibitions and salses and dinners so there is something 
                         for everyone!
