--- a/facilitation.html
+++ b/facilitation.html
@@ -72,7 +72,7 @@
                             <img src="images/facilitation.JPG" alt="img2" width="590">
                         </div>
                         <div class="col-md-5">
-                            <h1 class="text-white">How we do our Facilitation</h1>
+                            <h1 class="text-white">Where we do our Facilitation</h1>
                             <p class="para-1">
                                 <li>Physiotherapy Centres and Hospitals</li>
                                 <li>Universities and Educational Institutes</li>
