--- a/finances.html
+++ b/finances.html
@@ -77,6 +77,7 @@
                                 </li>
                                 <li>School Screening Programs: Across the 47 counties</li>
                                 <li>Education Programs</li>
+                                <li>Awareness Campaign</li>
                                 <li>Facilitate Research and Advocacy</li>
                                 <li>Create a Resource Centre (Scoliosis and Spine Centre)</li>
                             </p>
