--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                             <a href="donateCreditCard.html">Help Us</a>
                             <p class="para-1">
                                 Kenya Scoliosis Foundation (KSF) aims to educating, screening and creating awareness of Scoliosis 
-                                in our community. Our goal is treating the condition with bracing surgery and providing physiotherapy
+                                in our community. Our goal is treating the condition with bracing, surgery and providing physiotherapy
                                 where necessary. 
-                                In Kenya, as it is in may parts of the world, treating scoliosis is exorbitantly expensivehence making 
+                                In Kenya, as it is in may parts of the world, treating scoliosis is exorbitantly expensive hence making 
                                 it less accessible to many. KSF aims at reducing the cost of treatment and management by forming a consortium
                                 that will work together to ensure that there is awareness of this condition as well as make available the 
                                 right equipment for treatment.
@@ -198,11 +198,11 @@
             <!--Section 5 Upcomming Events-->
             <div class="section-5">
                 <div class="container text-center">
-                    <h1 class="heading-1">Upcomming Events</h1>
+                    <h1 class="heading-1">Upcoming Events</h1>
                     <p class="para-1">
-                        We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
+                        We have a host of wonderful events lined up for the year ahead that help raise funds and awareness 
                         for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there are lots of things 
-                        you can get involved with. We also have talks, exhibitions and salses and dinners so there is something 
+                        you can get involved with. We also have talks, exhibitions and sales and dinners so there is something 
                         for everyone!
                     </p>
                     
@@ -311,9 +311,9 @@
                 <div class="container text-center">
                     <h1 class="heading-1">Our Stories</h1>
                     <p class="para-1">
-                        We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
+                        We have a host of wonderful events lined up for the year ahead that help raise funds and awareness 
                         for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there are lots of things 
-                        you can get involved with. We also have talks, exhibitions and salses and dinners so there is something 
+                        you can get involved with. We also have talks, exhibitions and sales and dinners so there is something 
                         for everyone!
                     </p>
                     <div class="row justify-content-center text-center">
