--- a/ourGoals.html
+++ b/ourGoals.html
@@ -71,8 +71,8 @@
                         <div class="col-md-5">
                             <h1 class="text-white mt-3">Our Goal</h1>
                             <p class="para-1">
-                                Our goal is to create a resource center for medical proffesionals and researchers to visit regularly tocheck on children and 
-                                adults in order to provide evidence based treatement for spinal disorders.
+                                Our goal is to create a resource centre for medical proffesionals and researchers to visit regularly to check on children and 
+                                adults in order to provide evidence based treatement for spinal deformities.
                             </p>
                             <h1 class="text-white mt-0">Our Values</h1>
                             <p class="para-1">
