--- a/ourLeadership.html
+++ b/ourLeadership.html
@@ -69,17 +69,17 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-md-6">
-                            <h3 class="text-white mt-3">Esther Wangi</h3>
-                            <h6 class="text-white">Founder KSF</h6>
+                            <h3 class="text-white mt-3">Esther Wangui Gathiru</h3>
+                            <h6 class="text-white">Founder & President</h6>
                             <p class="para-1">
-                                The feeling of having minimal resources for treatment and management i devastating. As a scoliosis 
+                                The feeling of having minimal resources for treatment and management is devastating. As a scoliosis 
                                 warrior, I was determined to create a foundation where scoliotic patients could get care and support 
                                 they needed.
                             </p>
                             <p class="para-1">
-                                I aim to promote public wareness and national wide education campaigns to highlight the vital 
-                                importance of early diagnosis, rehabilitation, treatment and management of scoliosis and sspinal 
-                                deformities to dispel the frar and stigma
+                                I aim to promote public awareness and national wide education campaigns to highlight the vital 
+                                importance of early diagnosis, rehabilitation, treatment and management of scoliosis and spinal 
+                                deformities to dispel the fear and stigma
                             </p>
                         </div>
 
@@ -99,9 +99,9 @@
                         </div>
                         <div class="col-md-6">
                             <h3 class="mt-3">Andrea Lebel</h3>
-                            <h6 class="text-muted">Co-Founder KSF</h6>
+                            <h6 class="text-muted">Co-Founder</h6>
                             <p class="para-1">
-                                The feeling of having minimal resources for treatment and management i devastating. As a scoliosis 
+                                The feeling of having minimal resources for treatment and management is devastating. As a scoliosis 
                                 warrior, I was determined to create a foundation where scoliotic patients could get care and support 
                                 they needed.
                             </p>
