--- a/ourMission.html
+++ b/ourMission.html
@@ -74,7 +74,7 @@
                         <div class="col-md-5">
                             <h1 class="text-white mt-3">Our Mission</h1>
                             <p class="para-1">
-                                <strong>Kenya Scoliosis Foundation</strong> was created to promote oublic aweareness, screening, research, train nationwide, 
+                                <strong>Kenya Scoliosis Foundation</strong> was created to promote public awareness, screening, research, train nationwide, 
                                 Educational campaigns to highlight the vital importance of early diagnosis and management of children and adults suffering 
                                 from disabling and debilitating condition. 
                             </p>
