--- a/ourWork.html
+++ b/ourWork.html
@@ -78,7 +78,7 @@
                                 Kenya Scoliosis Foundation (KSF) aims to educating, screening and creating awareness of Scoliosis 
                                 in our community. Our goal is treating the condition with bracing surgery and providing physiotherapy
                                 where necessary. 
-                                In Kenya, as it is in may parts of the world, treating scoliosis is exorbitantly expensivehence making 
+                                In Kenya, as it is in many parts of the world, treating scoliosis is exorbitantly expensive hence making 
                                 it less accessible to many. KSF aims at reducing the cost of treatment and management by forming a consortium
                                 that will work together to ensure that there is awareness of this condition as well as make available the 
                                 right equipment for treatment.
