--- a/adminEventBookings.html
+++ b/adminEventBookings.html
@@ -179,9 +179,187 @@
                         </div>
                         
                         <!--Body-->
-                        <div class="container-fluid">
-                        
-                        </div>
+                        <main class="eventBookings">
+                            <div class="container-fluid">
+                                <div class="row mb-5">
+                                    <div class="col-xl-10 col-lg-9 col-md-8">
+                                        <div class="row">
+                                            <!--RSVP table-->
+                                            <div class="col-xl-8 col-lg-7 col-md-6 rsvpTable">
+                                                <h2 class="text-muted mb-3">RSVP List </h2>
+                                                <table class="table table-striped bg-light text-center">
+                                                    <thead>
+                                                        <tr class="text-muted">
+                                                            <th>RSVP No.</th>
+                                                            <th>Name</th>
+                                                            <th>Email</th>
+                                                            <th>Phone Number</th>
+                                                            <th>Contact</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <tr>
+                                                            <th>1</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>2</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>3</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>4</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>5</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>6</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>7</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>8</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>9</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th>10</th>
+                                                            <td>Wagatune Mwaura</td>
+                                                            <td>wagatunemwaura@gmail.com</td>
+                                                            <td>0712345678</td>
+                                                            <td>
+                                                                <button type="button" class="btn btn-success btn-sm" onclick="">Message</button>
+                                                            </td>
+                                                        </tr>
+                                                    </tbody>
+                                                </table>
+
+                                                <!--Pagination-->
+                                                <nav>
+                                                    <ul class="pagination justify-content-center">
+                                                        <li class="page-item">
+                                                            <a href="#" class="page-link py-2 px-3">
+                                                                <span>&laquo;</span>
+                                                            </a>
+                                                        </li>
+                                                        <li class="page-item active">
+                                                            <a href="#" class="page-link py-2 px-3">1</a>
+                                                        </li>
+                                                        <li class="page-item">
+                                                            <a href="#" class="page-link py-2 px-3">2</a>
+                                                        </li>
+                                                        <li class="page-item">
+                                                            <a href="#" class="page-link py-2 px-3">3</a>
+                                                        </li>
+                                                        <li class="page-item">
+                                                            <a href="#" class="page-link py-2 px-3">
+                                                                <span>&raquo;</span>
+                                                            </a>
+                                                        </li>
+                                                    </ul>
+                                                </nav>
+                                            </div>
+
+                                            <!--Cards-->
+                                            <div class="col-xl-3 col-lg-5 col-md-6">
+                                                <div class="card">
+                                                    <div class="card-body text-center">
+                                                        <h4 class="mb-2">Confirmation Email</h4>
+                                                        <p class="para">
+                                                            Let the guests know their spot is confirmed
+                                                        </p>
+                                                        <a href="adminRsvpConfirmation.html">
+                                                            <button type="button" class="btn btn-success">Edit</button>
+                                                        </a>
+                                                    </div>
+                                                </div>
+
+                                                <div class="card mt-4">
+                                                    <div class="card-body text-center">
+                                                        <h4 class="mb-2">Reminder Email</h4>
+                                                        <p class="para">
+                                                            Send a friendly reminder when the event is comming up
+                                                        </p>
+                                                        <a href="#">
+                                                            <button type="button" class="btn btn-success">Edit</button>
+                                                        </a>
+                                                    </div>
+                                                </div>
+
+                                                <div class="card mt-4">
+                                                    <div class="card-body text-center">
+                                                        <h4 class="mb-2">Email Alerts</h4>
+                                                        <p class="para">
+                                                            Get updated when guests RSVP
+                                                        </p>
+                                                        <a href="adminEmailAlerts.html">
+                                                            <button type="button" class="btn btn-success">Edit</button>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </main>
 
                         <!--Cancel Event Modal-->
                         <div class="modal fade" id="cancelEvent">
