--- a/scoliosisAwarenessMonth.html
+++ b/scoliosisAwarenessMonth.html
@@ -84,11 +84,11 @@
                                 As you will see in this section, June is the center of a 
                                 year long effort, and an important focal point to invite all members of the 
                                 Scoliosis Community to come together in a united campaign. We invite you to 
-                                send in your institution, organisation, or business logo to post on Our Suporters section
+                                send in your institution, organisation, or business logo to post on Our Supporters section
                             </p>
                             <p class="para-1">
                                 We are excited to share our education materials from our resource 
-                                centre and webinar on <a href="http://www.scoliosisandspinelonlinelearning.com/" >www.scoliosisandspinelonlinelearning.com</a>. Thanks to 
+                                centre and webinar on <a href="http://www.scoliosisandspineonlinelearning.com/" >Scoliosis and Spine Online Learning.</a>. Thanks to 
                                 our partner, <a href="https://www.alignscoliosisfoundation.org/">Align Scoliosis Foundation</a>, we are getting close to our 
                                 goal. We thank everyone who shared their time, talent and treasure with us
                                 throughout the years to make this possible.
@@ -103,7 +103,7 @@
             
             <div class="section-5">
                 <div class="container text-center">
-                    <h1 class="heading-1">Upcomming Events</h1>
+                    <h1 class="heading-1">Upcoming Events</h1>
                     
                     <div class="row justify-content-center text-center">
                         <!--The first card-->
