What is Scoliosis

--- a/whatIsScoliosis.html
+++ b/whatIsScoliosis.html
@@ -74,7 +74,7 @@
                         <div class="col-md-5">
                             <h1 class="text-white">What is Scoliosis ?</h1>
                             <p class="para-1">
-                                Scoliosis is a medical condition in which a person's spin has a sideways curve. 
+                                Scoliosis is a medical condition in which a person's spine has a sideways curve. 
                                 The curve is usually "S" or "C" shaped over three dimensions.
                             </p>
                             <p class="para-1">
@@ -82,7 +82,7 @@
                                 with breathing, heart, head and neck aches; and walking with severe pain.
                             </p>
                             <p class="para-1">
-                                So many people are mosinformed about scoliosis, it does not just affect your spine
+                                So many people are misinformed about scoliosis, it does not just affect your spine
                             </p>
                         </div>
                     </div>
