Donation Thank you

--- a/donateThankYou.html
+++ b/donateThankYou.html
@@ -35,7 +35,7 @@
                                 <a href="ourGoals.html" class="dropdown-item">Our Goals & Values</a>
                                 <a href="ourLeadership.html" class="dropdown-item">Our Leadership</a>
                                 <a href="scoliosisAwarenessMonth.html" class="dropdown-item">Aweareness Month</a>
-                                <a href="finances.html" class="dropdown-item">Finances Accountability</a>
+                                <a href="finances.html" class="dropdown-item">Our Finances</a>
                                 <a href="facilitation.html" class="dropdown-item">Facilitation</a>
                             </div>
                         </li>
