--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a href="ourGoals.html" class="dropdown-item">Our Goals & Values</a>
                                 <a href="ourLeadership.html" class="dropdown-item">Our Leadership</a>
                                 <a href="scoliosisAwarenessMonth.html" class="dropdown-item">Aweareness Month</a>
-                                <a href="finances.html" class="dropdown-item">Finances Accountability</a>
+                                <a href="finances.html" class="dropdown-item">Our Finances</a>
                                 <a href="facilitation.html" class="dropdown-item">Facilitation</a>
                             </div>
                         </li>
@@ -182,11 +182,10 @@
                 <div class="container-fluid">
                     <div class="d-flex justify-content-end">
                         <div class="d-flex flex-column m-4">
-                            <h1 class="heading-1">Like & Share Your Love</h1>
+                            <h1 class="heading-1 ml-0">Like & Share Your Love</h1>
                             <p class="para">
-                                "Kindness is the language which the deaf can hear and the blind can see"
+                                A kind gesture can reach a wound that only compassion can heal
                             </p>
-                            <p class="para">Mark Twain</p>
                             <a href="donateCreditCard.html">
                                 <input type="button" value="Donate" class="btn">
                             </a>
@@ -294,7 +293,7 @@
                             <h1 class="heading-1 text-white">Our Partners</h1>
                             <div class="row pt-md-5 mt-md-3 mb-md-5 justify-content-between text-center">
                                 <div class="col-md-6 col-sm-2">
-                                    <img src="images/ALIGN SCOLIOSIS Foundation logo.png" alt="">
+                                    <img src="images/Align Scoliosis foundation logo.jpg" alt="">
                                 </div>
                                 <div class="col-md-6 col-sm-2 logo2">
                                     <img src="images/AC Logo (Full 2).png" alt="">
