--- a/rsvp.html
+++ b/rsvp.html
@@ -70,7 +70,7 @@
 
                     <div class="row">
                         <div class="col-md-7">
-                            <h1 class="heading-1">Add Your Details</h1>
+                            <h1 class="heading-1 mt-5">Add Your Details</h1>
                             <form action="rsvpThankyou.html">
                                 <div class="form-row">
                                     <div class="col">
@@ -91,7 +91,7 @@
                                     <label for="phoneNumber" class="field">* Phone Number</label>
                                     <input type="text" class="form-control" id="phoneNumber" required>
                                 </div>
-                                <button type="submit" class="btn w-100">Submit</button>
+                                <button type="submit" class="btn w-100">Check Out</button>
                             </form> 
                         </div>
                         <div class="col-md-5">
@@ -105,6 +105,22 @@
                                         <i class="fas fa-map-marker-alt"></i> Venue
                                     </p>
                                 </div>
+                            </div>
+
+                            <div class="ml-4">
+                                <h6 class="mt-4">To pay for ticket please follow the process below:</h6>
+                                <p>
+                                    <ol class="para-1">
+                                        <li>Go to your M-PESA menu</li>
+                                        <li>Select Lipa na M-PESA</li>
+                                        <li>Select Buy Goods and Services</li>
+                                        <li>Enter Till Number: <strong>"5154883"</strong></li>
+                                        <li>Enter Amount: <strong>"KES "</strong></li>
+                                        <li>Enter Your M-PESA pin</li>
+                                        <li>Confirm payment/ transaction</li>
+                                        <li>Done!</li>
+                                    </ol>
+                                </p>
                             </div>
                         </div>
                         
